fix compiler options and add compile script to npm

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web Audio Markup Language",
   "main": "index.js",
   "scripts": {
+    "compile": "tsc",
     "start": "node main.js"
   },
   "author": "Peter Braun",
